Document PPDG/src/objects/Object_Audit__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DisableTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DisableTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Id_Field__c</fullName>
        <label>Parent Id Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Type__c</fullName>
        <label>Parent Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackChanges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Track Changes</label>
        <type>Checkbox</type>
    </fields>
    <label>Object Audit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Id_Field__c</columns>
        <columns>Parent_Type__c</columns>
        <columns>TrackChanges__c</columns>
        <columns>DisableTrigger__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>